tests/ui/impl-trait/alias-liveness/rpit-hidden-erased-unsoundness.edition2024.stderr
error: lifetime may not live long enough
  --> $DIR/rpit-hidden-erased-unsoundness.rs:24:5
   |
LL | fn step3<'a, 'b: 'a>() -> impl Send + 'a {
   |              -- lifetime `'b` defined here
LL |     step2::<'a, 'b>()
   |     ^^^^^^^^^^^^^^^^^ returning this value requires that `'b` must outlive `'static`

error: aborting due to 1 previous error

